# SafeClaw

./: .gitignore  .gitmodules  Cargo.toml  PHASE11_PLAN.md  README.md
.github/workflows/: release.yml
docs/: api-spec.md  plan-p1.md
src/: api.rs  config.rs  error.rs  lib.rs  main.rs
src/agent/: bridge.rs  bus.rs  engine.rs  handler.rs  launcher.rs  mod.rs  session_store.rs  types.rs
src/audit/: handler.rs
src/channels/: adapter.rs  auth.rs  confirmation.rs  dingtalk.rs  discord.rs  feishu.rs  message.rs  mod.rs  slack.rs  supervisor.rs  telegram.rs  wecom.rs
src/crypto/: keys.rs  mod.rs  secure_channel.rs
src/events/: handler.rs  mod.rs  store.rs  types.rs
src/gateway/: handler.rs  integration.rs  mod.rs  server.rs  websocket.rs
src/guard/: firewall.rs
src/leakage/: alerting.rs  audit.rs  bus.rs  canary.rs  drift.rs  firewall.rs  handler.rs  injection.rs  interceptor.rs  isolation.rs  mod.rs  persistence.rs  sanitizer.rs  segments.rs  taint.rs
src/memory/: artifact.rs  artifact_store.rs  bounded.rs  extractor.rs  gate.rs  insight.rs  insight_store.rs  mod.rs  resource.rs  store.rs  synthesizer.rs
src/personas/: handler.rs  mod.rs  store.rs  types.rs
src/privacy/: backend.rs  classifier.rs  compliance.rs  cumulative.rs  handler.rs  mod.rs  policy.rs  semantic.rs
src/scheduler/: handler.rs  mod.rs
src/session/: manager.rs  mod.rs  router.rs
src/settings/: handler.rs  mod.rs  types.rs
src/tee/: channel.rs  client.rs  manager.rs  mod.rs  orchestrator.rs  protocol.rs  runtime.rs  sealed.rs  stub.rs
ui/: .gitignore  CLAUDE.md  PLAN-DESIGN-SYSTEM.md  PLAN-WECHAT-UI.md  package.json  pnpm-lock.yaml  rsbuild.config.ts  tailwind.config.js
ui/src/: index.css  index.tsx  router.tsx
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: lib.rs
ui/src/assets/lotties/: loading.json
ui/src/components/custom/: copy-button.tsx  modal-provider.tsx  page-loading.tsx
ui/src/components/custom/copy-button/: index.tsx
ui/src/components/custom/memoized-markdown/: code-highlight.tsx  index.css  index.tsx
ui/src/components/custom/tiptap-editor/: index.tsx  mention-list.tsx  slash-command.ts  suggestion-renderer.tsx  tiptap.css
ui/src/components/ui/: input.tsx  scroll-area.tsx
ui/src/hooks/: use-agent-ws.ts  use-io.ts
ui/src/layouts/chat/: index.tsx
ui/src/layouts/chat/components/: activity-bar.tsx  main.tsx  user.tsx
ui/src/lib/: agent-api.ts  builtin-personas.ts  id.ts  polymarket.ts
ui/src/models/: agent.model.ts  chat.model.ts  global.model.ts  persona.model.ts  settings.model.ts
ui/src/pages/agent/: index.tsx
ui/src/pages/assets/: index.tsx
ui/src/pages/errors/: general-error.tsx  maintenance-error.tsx  not-found-error.tsx  unauthorised-error.tsx
ui/src/pages/events/: index.tsx
ui/src/pages/home/: index.tsx
ui/src/pages/knowledge/: index.tsx
ui/src/pages/marketplace/: index.tsx
ui/src/pages/placeholder/: index.tsx
ui/src/pages/settings/: index.tsx
ui/src/pages/systems/: index.tsx
ui/src/typings/: agent.ts  index.ts  message.ts  persona.ts  user.ts
(+24 files in other folders)
