[package]
name = "safeclaw"
version = "0.1.0"
edition = "2021"
authors = ["A3S Lab Team"]
license = "MIT"
repository = "https://github.com/A3S-Lab/SafeClaw"
description = "SafeClaw - Secure Personal AI Assistant with TEE Support"
keywords = ["ai", "assistant", "tee", "privacy", "secure"]
categories = ["command-line-utilities", "cryptography"]

[lib]
name = "safeclaw"
path = "src/lib.rs"

[[bin]]
name = "safeclaw"
path = "src/main.rs"

[dependencies]
# Internal A3S crates
a3s-tools-core = { version = "0.1", path = "../tools-core" }
a3s-lane = { version = "0.1", path = "../lane" }
a3s-cron = { version = "0.1", path = "../cron" }
a3s-code = { version = "0.3", path = "../code" }
a3s_context = { version = "0.1", path = "../context" }
a3s-gateway = { version = "0.1", path = "../gateway" }
a3s-privacy = { version = "0.1", path = "../privacy" }
a3s-event = { version = "0.1", path = "../event" }

# Regex for privacy classification
regex = "1.10"

# Base64 for encoding
base64 = "0.21"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = { version = "0.7", features = ["codec"] }

# gRPC for service communication
tonic = "0.11"
prost = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Self-update
a3s-updater = { version = "0.1", path = "../updater" }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"

# HTTP for channels and webhooks
reqwest = { version = "0.11", features = ["json", "stream"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# WebSocket
tokio-tungstenite = "0.21"

# Cryptography for secure communication
ring = "0.17"
aes-gcm = "0.10"
x25519-dalek = { version = "2.0", features = ["reusable_secrets"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"

# UUID and time
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Bytes
bytes = "1.5"

# Agent module dependencies
dirs-next = "2.0"

[build-dependencies]
tonic-build = "0.11"
prost-build = "0.12"

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"
