[workspace]

[package]
name = "safeclaw-ui"
version = "0.1.0"
edition = "2021"
description = "SafeClaw Desktop UI"
authors = ["A3S Lab Team"]
license = "MIT"

[lib]
name = "safeclaw_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
